# mlir_python_bindings

./: CMakeLists.txt  README.md  build_mlir.sh  demo.py  setup.py
.github/workflows/: build.yml
cpp/: CMakeLists.txt
python/: CMakeLists.txt
scripts/: LLVMExports-release.cmake  LLVMExports.cmake  build_mlir.sh  copy_from_mlir.sh  demo.py
tutorial/: benchmark.py  compiler_utils.py  linalg_tut.py  passes.py  refbackend.py
